manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "akscluster-54b1"
    labels:
        app: "akscluster-54b1"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: akscluster99cf-akscluster-54b1.88402124dcc347e48bb5.westus2.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "akscluster-54b1"
                servicePort: 8080
